--- a/publisher_subscriber_joint/CMakeLists.txt
+++ b/publisher_subscriber_joint/CMakeLists.txt
@@ -137,8 +137,8 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/publisher_subscriber_joint_node.cpp)
-add_executable(publisher_node ../src/publisher_joint.cpp)
-add_executable(subscriber_node ../src/subscriber_joint.cpp)
+add_executable(publisher_node src/publisher_joint.cpp)
+add_executable(subscriber_node src/subscriber_joint.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
